Refactor : 회원 조회 코드 수정